--- a/README
+++ b/README
@@ -1,34 +1,5 @@
-nousbot is a simple coffeescript/node.js irc bot meant to do useful things
+nous v2, rewriiiiteeee
 
-not ready yet, but hopefully will be soon :)
-currently only supports basic functionality
-admin commands, screen scraping, events!
-
-be sure to copy the config.coffee.defaults to config.coffee and update the file
-ensure your log dir exists and is writeable
-
-requirements are listed in package.json
-
-contributors:
-    eggsby
-    tanepiper
-
-plugins:
-    protomega (stock, tinyurl)
-    TheEternalAbyss (urban prototype)
-    stenehall (isit)
-    joshmanders (weather)
-
-known issues: 
-    multiple networks aren't yet supported (but multiple channels works)
-    uncaught plugin errors crash entire process (fix this with a try/catch)
-    logging isn't working as expected, logging everything from any channel
-
-TODO
-    fix logging
-    implement global redis object for set/get
-    create a way to see active plugins
-    finish plugin hotloading/unloading
-    proper documentation
-    --------
-    web ui
+current deps:
+  node.js
+  npm install irc
